mobile header 2 (try jump fix)

--- a/master/styles.css
+++ b/master/styles.css
@@ -139,6 +139,7 @@ body {
 .body-wrapper {
     display: grid;
     grid-template-columns: minmax(0, 1fr);
+    position: static;
 }
 
 img {max-width: 100%}
@@ -1197,9 +1198,16 @@ input[id=radio-4]:checked ~ .glider {
     }
 
 
+    header.active {
+        backdrop-filter: saturate(140%) blur(25px);
+        -webkit-backdrop-filter: saturate(140%) blur(25px);
+        min-height: 100vh
+    }
+
+
     .header-inner {
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         gap: calc(1.618 * var(--row-gap));
     }
